force-app/main/default/objects/LookupSetting__c/LookupSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Lookup Setting</label>
</CustomObject>