force-app/main/default/objects/LookupSetting__c/fields/DNPDLAccountFields__c.field-meta.xml
<CustomField>
    <fullName>DNPDLAccountFields__c</fullName>
    <label>DN and PDL account Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>