force-app/main/default/objects/LookupSetting__c/fields/Is_Record_Addition_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Record_Addition_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Record Addition Allowed</label>
    <type>Checkbox</type>
</CustomField>