force-app/main/default/objects/LookupSetting__c/fields/IsRecordDeleteAllowed__c.field-meta.xml
<CustomField>
    <fullName>IsRecordDeleteAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Record Delete Allowed</label>
    <type>Checkbox</type>
</CustomField>