force-app/main/default/objects/LookupSetting__c/fields/ParentObject__c.field-meta.xml
<CustomField>
    <fullName>ParentObject__c</fullName>
    <label>Parent Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>