force-app/main/default/objects/LookupSetting__c/fields/ParentObjectRecordType__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectRecordType__c</fullName>
    <label>Parent Object Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>