force-app/main/default/objects/LookupSetting__c/fields/ReadOnlyAttribute__c.field-meta.xml
<CustomField>
    <fullName>ReadOnlyAttribute__c</fullName>
    <label>Read Only Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>