force-app/main/default/objects/LookupSetting__c/fields/RecordCondition__c.field-meta.xml
<CustomField>
    <fullName>RecordCondition__c</fullName>
    <label>Record Condition</label>
    <type>TextArea</type>
</CustomField>