force-app/main/default/objects/LookupSetting__c/fields/RequiredAttribute__c.field-meta.xml
<CustomField>
    <fullName>RequiredAttribute__c</fullName>
    <label>Required Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>